Fixed navBar spacing

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 #navBarContent a {
-    margin-top: 1.1rem;
+    margin-top: 1.2rem;
     margin-bottom: 1.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
